# basis-trade-agent

./: .gitignore  Makefile  README.md  agent.py  api.Dockerfile  application.py  config.demo.example.yaml  config.example.yaml  demo.py  main.py  prepare_demo.py  pyproject.toml  worker.Dockerfile
.github/workflows/: api-deploy.yml  app-deploy.yml
landing-page/: Dockerfile  activity-viewer.js  activity.html  app.js  index.css  index.html  styles.css
landing-page/activity/: index.html  viewer.js
scripts/: probe_gmx_data.py  sweep_funds.py
src/basis_trade_agent/: activity.py  chat_bot.py  chat_tool.py  config.py  decision.py  execution.py  gmx_client.py  llm.py  main.py  prompts.py  rates.py  tools.py  wallet.py
tests/: conftest.py  test_activity.py  test_chat_bot.py  test_config_update.py  test_decision.py  test_execution.py  test_gmx_client.py  test_llm.py  test_main.py  test_prepare_demo.py  test_rates.py  test_tools.py  test_wallet.py
