[project]
name = "basis-trade-agent"
version = "0.1.0"
description = "Phase 1 MVP: delta-neutral GMX V2 basis trade agent on Arbitrum"
requires-python = ">=3.11,<4"
dependencies = [
    "web3-ethereum-defi",
    "web3",
    "eth-account",
    "pydantic>=2",
    "pyyaml",
    "requests",
    "cryptography",
    "fastapi",
    "uvicorn",
    "ccxt>=4.5.64",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/basis_trade_agent"]

[tool.ruff]
line-length = 140
target-version = "py311"
